@@ -1,4 +1,9 @@
 2012-02-20 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-06-20
+	* Prepare Confdb to be compatible with both table definitions (tmp_sequence_entries)
+	  allowing to retrieve the operator field when available in the database.
+
+2012-02-20 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-06-19
 	* Update load_configuration procedure and SQL definitions to take into account module 
 	  reference operators inside Sequences.
